--- a/frontpage.css
+++ b/frontpage.css
@@ -18,6 +18,7 @@ body {
    z-index: 1;
    background: linear-gradient(30deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
    background-size: 600% 600%;
+   display: flex;
    animation: gradientAnimation 10s ease infinite;
 }
 .title {
@@ -48,13 +49,13 @@ body {
 }
 
 .nav {
-   display: flex;
-   justify-content: space-around;
-   padding: 10px 0;
+
+flex-wrap: wrap;
+ 
 }
 
 .nav a {
-   font-weight: bold;
+   font-weight: 600;
    color: black;
    text-decoration: none;
    padding: 10px 20px;
@@ -189,28 +190,31 @@ header {
 }
 
 .img1 {
-   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQboNyUxKPIqFGv885qctPpVhZoXkdQkonmB75k-e1Y2BX4liwqHj8T8IfrSvjzDbUs5-8&usqp=CAU);
+   background-image: url(https://media.istockphoto.com/id/1454794642/photo/empty-corridor-hospital.webp?b=1&s=170667a&w=0&k=20&c=Xbf9XHT1CGMt0QwMKNauTC038BDt1t7pR9keixSgS3A=);
    background-repeat: no-repeat;
    background-size: cover;
 }
 .img2 {
-   background-image: url(https://www.shutterstock.com/image-photo/close-doctor-showing-medical-analytics-260nw-1457191769.jpg);
+   background-image: url(https://st.depositphotos.com/1000128/2158/i/450/depositphotos_21581271-stock-photo-stethoscope-on-laptop-keyboard.jpg);
    background-repeat: no-repeat;
-   background-size: cover;
+   
+  
 }
 .img3 {
-   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ773ds-gEpzw6JIyOY0WGx-vH0_lTwdXLa9Lr6Hc4GbNV1I9CZLqWKLDOt3wa-9eyFunc&usqp=CAU);
+   background-image: url(https://images.unsplash.com/photo-1530026405186-ed1f139313f8?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fG1lZGljYWx8ZW58MHx8MHx8fDA%3D);
    background-repeat: no-repeat;
    background-size: cover;
+
 }
 .img4 {
-   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQn0PbXc54QuqU09Ttdxjr7QhpXIhxYlr_sA4vVcA2T82jSqaC3c9PZujMxWhuDy6KKmm0&usqp=CAU);
+   background-image: url(https://media.gettyimages.com/id/1312706413/photo/modern-hospital-building.jpg?s=612x612&w=0&k=20&c=oUILskmtaPiA711DP53DFhOUvE7pfdNeEK9CfyxlGio=);
 background-repeat: no-repeat;
-background-size: cover;
+background-size: auto 100%;
+
 }
 
 .img5 {
-   background-image: url(https://codeit.us/storage/blog-posts/a3cef487-4f0c-5669-95f7-527747bf811c/conversions/Hospital-system-banner02-main.jpg);
+   background-image: url(https://i.pinimg.com/474x/58/80/49/58804997cd06915fece52e9c4bc89938.jpg);
    background-repeat: no-repeat;
    background-size: cover;
 }
@@ -246,6 +250,7 @@ background-size: cover;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
+   
 }
 
 .box {
@@ -261,27 +266,28 @@ background-size: cover;
 .box3-img,
 .box4-img {
    background-repeat: no-repeat;
-   background-size: contain;
-   background-position: center;
-   height: 50px;
-   width: 50px;
+display: block;
+   height: 100%;
+   width: 100%;
    margin: 0 auto;
+   background-size: contain;
+ 
 }
 
 .box1-img {
-   background-image: url("appoint.svg");
+   background-image: url("https://t3.ftcdn.net/jpg/02/44/58/20/240_F_244582094_BTflxzaxlNDHk250JiOaPwAeC4487ns8.jpg");
 }
 
 .box2-img {
-   background-image: url("login.png");
+   background-image: url("https://t4.ftcdn.net/jpg/02/11/04/53/240_F_211045328_HnemU2NVFNwDWnQtDi5JHeHVhMV1jTOr.jpg");
 }
 
 .box3-img {
-   background-image: url("service.png");
+   background-image: url("https://t4.ftcdn.net/jpg/06/14/93/73/240_F_614937332_ekRdE7Vba2DtfoWR9l0qlclxqIVmHgrd.jpg");
 }
 
 .box4-img {
-   background-image: url("call.svg");
+   background-image: url("https://t3.ftcdn.net/jpg/06/25/70/44/240_F_625704477_ts4U9PMM2HIcorPuNHqdwuQ0LJX8L4SW.jpg");
 }
 
 .box {
@@ -294,6 +300,7 @@ background-size: cover;
 .box1 {
    background-color: #e1f199;
    border: 1px solid #c2e918;
+   
 }
 
 .box2 {
