--- a/style.css
+++ b/style.css
@@ -2,15 +2,15 @@
 {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
-}
+	box-sizing: border-box;}
+/* Patient.css */
 body{
 	
 	background: #f2f2f2;
 }
 
 
-}
+
 .Head h2{
 	font-size:24px;
 	line-height: 24px;
